# kaggle_FB3

./: .gitignore  config.py  dataset.py  pyproject.toml  train.py  utils.py
code/: config.py  main.py  model.py  requirement.txt
fb3/: .config.pth  config.py  main.py  train.py
